--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -116,7 +116,7 @@
     </paper-dialog>
 
       <div class="card-actions">
-        <paper-checkbox class="papercardcenter" style="text-align: center;" checked>Apply Adjustment Based Presets</paper-checkbox>
+        <!-- <paper-checkbox class="papercardcenter" style="text-align: center;" checked>Apply Adjustment Based Presets</paper-checkbox> -->
         <!--
         <paper-checkbox checked>Checkbox</paper-checkbox>
         <paper-checkbox disabled>Disabled</paper-checkbox>
