--- a/software/src/omaha/templates/components/omaha-drawer.html
+++ b/software/src/omaha/templates/components/omaha-drawer.html
@@ -21,7 +21,7 @@
       <paper-item page="accountCreation">Admin<iron-icon class="icon" icon="account-circle"></iron-icon></paper-item>
       <!-- <paper-item page="zoneCreation">Zone Creation</paper-item> -->
       <paper-item page="zoneMap">Update Zones<iron-icon class="icon" icon="settings-overscan"></iron-icon></paper-item>
-      <paper-item page="paging">Paging<iron-icon class="icon" icon="maps:local-phone"></iron-icon></paper-item>
+      <paper-item page="pagingMap">Paging<iron-icon class="icon" icon="maps:local-phone"></iron-icon></paper-item>
     </paper-menu>
   </template>
   <script>
