added floating point math in the DB, backend (along with the transformations, and then in the frontend)

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -524,15 +524,15 @@
     
     // make the equalizer get the constants out to the database here
 
-    $(function() {
-      $(document.getElementsByClassName("custom_slider")).each(function(i) {
+  $(function() {
+    $(document.getElementsByClassName("custom_slider")).each(function(i) {
 
       //console.log(this);
 
       $(this).slider({
         orientation: "vertical",
         range: "min",
-        //step: .5,
+        step: .01,
         min: -40,
         max: 10,
         value: 0,
